[tool.poetry]
name = "Data Structures and Algorithms"
version = "0.1.1"
description = "Revisiting some data structures and algorithms."
authors = ["Gurashish Singh <gurashish1singh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
black = "^22.8.0"
flake8 = "5.0.4"
flake8-bugbear = "22.10.27"

[tool.black]
line-length = 100

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true
quiet = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
